# optixSoltraceDemos

./: .gitignore  CMakeLists.txt  README.md  sampleConfig.h.in
CMake/: ConfigCompilerFlags.cmake  CopyDLL.cmake  FindNVTX.cmake  FindOpenEXR.cmake  FindOptiX.cmake  FindZlibStatic.cmake  LinuxCPUInfo.cmake  Macros.cmake  ptx2cpp.cmake  testmain.c
cmake/: FindOptiX.cmake
cuda/: BufferView.h  GeometryData.h  GeometryDataST.h  Light.h  MaterialData.h  MaterialDataST.h  Preprocess.h  Soltrace.h  helpers.h  intersection.cu  materials.cu  parallelogram.cu  random.h  sun.cu  whitted.cu  whitted.h
data/: field_200_elements.csv  field_250_elements.csv
data/csv/: field_1700_elements.csv  field_200_elements.csv  field_30_elements.csv
data/stinput/: small_system_parabolic_heliostats_flat_receiver.stinput  toy_problem_flat_cylindrical.stinput  toy_problem_parabolic.stinput
demos/: CMakeLists.txt  demo_cylinder_receiver.cpp  demo_dynamic_scene.cpp  demo_large_scene.cpp  demo_parabolic_surface.cpp  demo_refactor.cpp  demo_refactor_test.cpp  demo_three_heliostats.cpp  largeSceneDemo.cpp  optixSoltraceDemo.cpp
interface/: CMakeLists.txt  soltrace_optix_interface.cpp  soltrace_optix_interface.hpp
lib/: Aperture.cpp  Aperture.h  CMakeLists.txt  CompileWithTasks.h  SolTrSystem.cpp  SolTrSystem.h  SoltraceState.h  SoltraceType.h  Surface.h  dataManager.cpp  dataManager.h  data_manager.cpp  data_manager.h  element.cpp  element.h  geometry.cpp  geometry.h  geometryManager.cpp  geometry_manager.cpp  geometry_manager.h  mathUtil.h  math_util.h  pipelineManager.cpp  pipelineManager.h  pipeline_manager.cpp  pipeline_manager.h  soltrace_state.h  soltrace_system.cpp  soltrace_system.h  sun_utils.cu  timer.h  util_record.hpp  vector3d.h
optixSoltraceDemo/: CMakeLists.txt  optixSoltraceDemo.cpp
plotting/: euler_angles_visualization.py  plotting.py  plotting_soltrace_results.py
plotting/post_processing/: check_element_hitpoints.py  check_ideal_reflection.py  check_receiver_hitpoints.py  plot_cpu_vs_gpu_geometry.py  plot_flux_map.py
plotting/pre_processing/: rotate_heliostats.py
plotting/timing/: plot_timing.py  timing.bat  timing_cpu_soltrace.bat
scripts/: plot_frames.py  plotting.py  test.py
scripts/hitprograms/: ray_cylinder.py
scripts/post_processing/: check_receiver_hitpoints.py  clean_direct_sun.py  flux_map_calculator.py  plot_flux_map_gpu.py
scripts/pre_processing/: compute_anchor_v1_v2_from_aimpoint.py  plot_stinput.py
scripts/timing/: parsing.py  plot_timing.py  timing.bat
src/: CMakeLists.txt
src/core/: data_manager.cpp  data_manager.h  element.cpp  element.h  geometry_manager.cpp  geometry_manager.h  pipeline_manager.cpp  pipeline_manager.h  soltrace_system.cpp  soltrace_system.h  sun_utils.cu  sun_utils.h  timer.h
src/interface/: CMakeLists.txt  soltrace_optix_interface.cpp
src/shaders/: GeometryDataST.h  Soltrace.h  device_util.h  intersection.cu  materials.cu  sun.cu
src/utils/: math_util.h  util_check.hpp
support/: CMakeLists.txt
support/imgui/: CMakeLists.txt
sutil/: CMakeLists.txt
tmp/: CompilerInfo.cmake
